added navbar bootstrap code & few unit testcases

--- a/src/main/templates/index.html
+++ b/src/main/templates/index.html
@@ -1,6 +1,1 @@
-<html>
-    <title> MedVoyage </title>
-    <body>
-        <p> Hello! Welcome to MedVoyage...</p>
-    </body>
-</html>
+{% extends 'base.html' %} {% block title %}MedVoyage | Home{% endblock %}
