--- a/src/main/templates/login.html
+++ b/src/main/templates/login.html
@@ -26,9 +26,21 @@
                     <div class="card">
                         <div class="card-body">
                             <h2 class="card-title text-center">Login</h2>
-                            <form id="login-form" method="get">
+                            <form id="login-form" method="post">
                                 <div class="form-group">
-                                    
+                                    <label for="{{form.username.id_for_label}}">Username</label>
+                                    <input type="text" class="form-control form-control-lg" id="{{form.username.id_for_label}}" name="{{form.username.name}}" placeholder="JohnDoe">
+                                </div>
+
+                                <div>
+                                    <label for="{{form.password.id_for_label}}">Password</label>
+                                    <input type="password" class="form-control form-control-lg" id="{{form.password.id_for_label}}" name="{{form.password.name}}" placeholder="Enter your password">
+                                </div>
+
+                                <button type="button" class="btn btn-primary btn-block" onclick="submitForm()">Login</button>
+                                
+                                <div class="text-center">
+                                    <a href="/signup">Don't have an account? Sign Up Here</a>
                                 </div>
                             </form>
                         </div>
