Initial commit for About Us and Contact Us pages

--- a/src/main/templates/navbar.html
+++ b/src/main/templates/navbar.html
@@ -17,10 +17,10 @@
         <ul class="navbar-nav ms-lg-auto">
             <!-- About and Contact Links -->
             <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="{% url 'about_us' %}">About Us</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" href="{% url 'contact_us' %}">Contact Us</a>
             </li>
             <!-- Login/Signup Button -->
             <li class="nav-item">
