--- a/src/main/templates/login.html
+++ b/src/main/templates/login.html
@@ -1,52 +1,34 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Login</title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-        <style>
-            /*Style variables for login page*/
-            :root {
-                --button-color: #19bd60;
-                --button-hover-color: #14924a; 
-            }
+{% extends 'base.html' %}
 
-            .btn-primary {
-                background-color: var(--button-color);
-            }
+{% block title %}MedVoyage | Login{% endblock %}
 
-            .btn-primary:hover {
-                background-color: var(--button-hover-color);
-            }
-        </style>
-    </head>
-    <body>
-        <div class="container">
-            <div class="row justify-content-center align-items-center" style="height: 100vh;">
-                <div class="col-md-6">
-                    <div class="card">
-                        <div class="card-body">
-                            <h2 class="card-title text-center">Login</h2>
-                            <form id="login-form" method="post">
-                                <div class="form-group">
-                                    <label for="{{form.username.id_for_label}}">Username</label>
-                                    <input type="text" class="form-control form-control-lg" id="{{form.username.id_for_label}}" name="{{form.username.name}}" placeholder="JohnDoe">
-                                </div>
+{% block content %}
+    <div class="container">
+        <div class="row justify-content-center align-items-center" style="height: 100vh;">
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-body">
+                        <h2 class="card-title text-center">Login</h2>
+                        <form id="login-form" method="post">
+                            <div class="form-group">
+                                <label for="{{form.username.id_for_label}}">Username</label>
+                                <input type="text" class="form-control form-control-lg" id="{{form.username.id_for_label}}" name="{{form.username.name}}" placeholder="JohnDoe">
+                            </div>
 
-                                <div>
-                                    <label for="{{form.password.id_for_label}}">Password</label>
-                                    <input type="password" class="form-control form-control-lg" id="{{form.password.id_for_label}}" name="{{form.password.name}}" placeholder="Enter your password">
-                                </div>
+                            <div>
+                                <label for="{{form.password.id_for_label}}">Password</label>
+                                <input type="password" class="form-control form-control-lg" id="{{form.password.id_for_label}}" name="{{form.password.name}}" placeholder="Enter your password">
+                            </div>
 
-                                <button type="button" class="btn btn-primary btn-block" onclick="submitForm()">Login</button>
-                                
-                                <div class="text-center">
-                                    <a href="/signup">Don't have an account? Sign Up Here</a>
-                                </div>
-                            </form>
-                        </div>
+                            <button type="button" class="btn btn-primary btn-block" onclick="submitForm()">Login</button>
+                            
+                            <div class="text-center">
+                                <a href="/signup">Don't have an account? Sign Up Here</a>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
         </div>
-    </body>
-</html>
+    </div>
+{% endblock %}
