Added basic login functionality

--- a/src/main/templates/login.html
+++ b/src/main/templates/login.html
@@ -20,7 +20,7 @@
                                 <input type="password" class="form-control form-control-lg" id="{{form.password.id_for_label}}" name="{{form.password.name}}" placeholder="Enter your password">
                             </div>
 
-                            <button type="button" class="btn btn-primary btn-block" onclick="submitForm()">Login</button>
+                            <button type="button" class="btn btn-primary btn-block text-center" onclick="submitForm()">Login</button>
                             
                             <div class="text-center">
                                 <a href="/signup">Don't have an account? Sign Up Here</a>
