--- a/src/main/templates/navbar.html
+++ b/src/main/templates/navbar.html
@@ -24,7 +24,7 @@
             </li>
             <!-- Login/Signup Button -->
             <li class="nav-item">
-                <a href="#" class="nav-link fw-bold text-mv-green">Login/Signup</a>
+                <a href="signup/" class="nav-link fw-bold text-mv-green">Login/Signup</a>
             </li>
         </ul>
     </div>
