added optinal field during signup

--- a/src/main/templates/signup.html
+++ b/src/main/templates/signup.html
@@ -76,6 +76,8 @@
             {% endif %}
         </div>
 
+        {{ form.login_type }}
+
         <button type="submit" class="btn btn-primary mt-3">Sign-Up</button>
     </form>
 </div>
