--- a/src/main/templates/base.html
+++ b/src/main/templates/base.html
@@ -12,7 +12,9 @@
 
   <body>
     {% include 'navbar.html' %}
-    {% block content %} {% endblock %}
+    {% block content %}
+    {% include 'footer.html' %}
+     {% endblock %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
             crossorigin="anonymous">
