--- a/src/main/templates/base.html
+++ b/src/main/templates/base.html
@@ -2,20 +2,30 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
           rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
           crossorigin="anonymous">
+
     {% load static %}
+
     <link href={% static "css/main.css" %} rel="stylesheet"/>
+
     <title>{% block title %}MedVoyage Home{% endblock %}</title>
+
   </head>
 
   <body>
     {% include 'navbar.html' %}
+
     {% block content %} {% endblock %}
+
+    {% include 'footer.html' %}
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
             crossorigin="anonymous">
     </script>
+
   </body>
 </html>
