--- a/src/main/templates/base.html
+++ b/src/main/templates/base.html
@@ -7,8 +7,9 @@
           rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
           crossorigin="anonymous">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+    
     {% load static %}
-
     <link href={% static "css/main.css" %} rel="stylesheet"/>
 
     <title>{% block title %}MedVoyage Home{% endblock %}</title>
