added front landing page text

--- a/src/main/templates/index.html
+++ b/src/main/templates/index.html
@@ -1,1 +1,14 @@
 {% extends 'base.html' %} {% block title %}MedVoyage | Home{% endblock %}
+
+{% block content %}
+<div class="d-flex justify-content-center align-items-center" style="height: 80vh;">
+    <figure class="text-center">
+        <blockquote class="blockquote">
+            <h1 class="display-2 display-md-3 display-lg-4" style="color: #333;font-weight: bold;">MedVoyage</h1>
+        </blockquote>
+        <figcaption class="blockquote-footer mt-1" style="font-size: 1 rem;">
+            Your journey to health begins here: Navigating Wellness with MedVoyage.
+        </figcaption>
+    </figure>
+</div>
+{% endblock %}
