--- a/src/main/templates/signup.html
+++ b/src/main/templates/signup.html
@@ -8,7 +8,7 @@
 
         <div class="form-group col-md-6">
             <label for="id_username">Username:</label>
-            <input type="text" name="username" class="form-control" id="id_username" placeholder="Enter username" required value="{{ form.username.value }}">
+            <input type="text" name="username" class="form-control" id="id_username" placeholder="JohnDoe" required value="{{ form.username.value|default:'' }}">
             {% if form.username.errors %}
                 <div class="alert alert-danger">
                     {{ form.username.errors }}
@@ -18,7 +18,7 @@
 
         <div class="form-group col-md-6">
             <label for="id_first_name">First Name:</label>
-            <input type="text" name="first_name" class="form-control" id="id_first_name" placeholder="Enter First Name" value="{{ form.first_name.value }}">
+            <input type="text" name="first_name" class="form-control" id="id_first_name" placeholder="John" value="{{ form.first_name.value|default:'' }}">
             {% if form.first_name.errors %}
                 <div class="alert alert-danger">
                     {{ form.first_name.errors }}
@@ -28,7 +28,7 @@
 
         <div class="form-group col-md-6">
             <label for="id_last_name">Last Name:</label>
-            <input type="text" name="last_name" class="form-control" id="id_last_name" placeholder="Enter Last Name" value="{{ form.last_name.value }}">
+            <input type="text" name="last_name" class="form-control" id="id_last_name" placeholder="Doe" value="{{ form.last_name.value|default:'' }}">
             {% if form.last_name.errors %}
                 <div class="alert alert-danger">
                     {{ form.last_name.errors }}
@@ -38,7 +38,7 @@
 
         <div class="form-group col-md-6">
             <label for="id_email">Email:</label>
-            <input type="email" name="email" class="form-control" id="id_email" placeholder="Enter email" required value="{{ form.email.value }}">
+            <input type="email" name="email" class="form-control" id="id_email" placeholder="John@email.com" required value="{{ form.email.value|default:'' }}">
             {% if form.email.errors %}
                 <div class="alert alert-danger">
                     {{ form.email.errors }}
@@ -48,7 +48,7 @@
 
         <div class="form-group col-md-6">
             <label for="id_phone">Phone:</label>
-            <input type="text" name="phone" class="form-control" id="id_phone" placeholder="Enter phone number" value="{{ form.phone.value }}">
+            <input type="text" name="phone" class="form-control" id="id_phone" placeholder="555-555-5555" value="{{ form.phone.value|default:'' }}">
             {% if form.phone.errors %}
                 <div class="alert alert-danger">
                     {{ form.phone.errors }}
