Implemented the entirety of the reset password feature

--- a/src/main/templates/reset_password.html
+++ b/src/main/templates/reset_password.html
@@ -8,8 +8,8 @@
             <div class="col-md-6">
                 <div class="card">
                     <div class="card-body">
-                        <h2 class="card-title text-center">Login</h2>
-                        <form id="login-form" method="post">
+                        <h2 class="card-title text-center">Reset Password</h2>
+                        <form id="reset_password" method="post">
                             {% csrf_token %}
                             <div class="form-group">
                                 <label for="id_username">Username</label>
@@ -17,17 +17,17 @@
                             </div>
 
                             <div>
-                                <label for="id_password">Password</label>
-                                <input type="password" class="form-control form-control-lg" id="id_password" name="password" placeholder="Enter your password">
+                                <label for="id_password">New Password</label>
+                                <input type="password" class="form-control form-control-lg" id="id_password" name="new_password" placeholder="Enter your new password">
                             </div>
-
-                            <button type="submit" class="btn btn-primary btn-block text-center">Login</button>
+                           <div>
+                            <label for="id_security_question"> Security Question</label>
+                            <input type ="text" class="form-control form-control-lg" id="id_security_question" name="security_question" placeholder="Enter your security question answer">
+                           </div>
+                            <button type="submit" class="btn btn-primary btn-block text-center">Reset</button>
                             
                             <div class="text-center">
                                 <a href="{% url 'signup' %}">Don't have an account? Sign Up Here</a>
-                            </div>
-                            <div class="text-center">
-                                <a href="{% url 'reset_password' %}">Forgot Password? Reset Here</a>
                             </div>
                         </form>
                     </div>
