--- a/src/main/templates/signup.html
+++ b/src/main/templates/signup.html
@@ -55,6 +55,16 @@
                 </div>
             {% endif %}
         </div>
+        
+        <div class="form-group col-md-6">
+            <label for = "security_question">Security Question:</label>
+            <input type="text" name="security_question" class="form-control" id="security_question" placeholder="Enter what city you grew up in" value="{{ form.security_question.value }}">
+            {% if form.security_question.errors %}
+                <div class = "alert alert-danger">
+                    {{ form.security_question.errors }}
+                </div>
+            {% endif %}
+        </div>
 
         <div class="form-group col-md-6">
             <label for="id_password">Password:</label>
