--- a/src/main/templates/updateform.html
+++ b/src/main/templates/updateform.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="container mx-auto">
     <h2 class="text-center">Update User Information</h2>
-    <form method="post">
+    <form method="post" action="{% url 'update_patient_info' %}">
         {% csrf_token %}
 
         <div class="form-group col-md-6 mx-auto mt-2">
