--- a/src/main/templates/clientprofile.html
+++ b/src/main/templates/clientprofile.html
@@ -10,7 +10,7 @@
 
         <div class="form-group col-md-6 mx-auto mt-2">
             <label for="id_username">Username:</label>
-            <input type="text" name="username" class="form-control" id="id_username" placeholder="JohnDoe" required value="{{ user.username}}">
+            <input type="text" name="username" class="form-control" id="id_username" placeholder="JohnDoe" required value="{{ user.username}}" readonly>
             {% if form.username.errors %}
                 <div class="alert alert-danger">
                     {{ form.username.errors }}
@@ -20,7 +20,7 @@
 
         <div class="form-group col-md-6 mx-auto mt-2">
             <label for="id_firstname">First Name:</label>
-            <input type="text" name="first_name" class="form-control" id="id_firstname" placeholder="John" value="{{ user.first_name }}">
+            <input type="text" name="first_name" class="form-control" id="id_firstname" placeholder="John" value="{{ user.first_name }}" readonly>
             {% if form.first_name.errors %}
                 <div class="alert alert-danger">
                     {{ form.first_name.errors }}
@@ -30,7 +30,7 @@
 
         <div class="form-group col-md-6 mx-auto mt-2">
             <label for="id_lastname">Last Name:</label>
-            <input type="text" name="last_name" class="form-control" id="id_lastname" placeholder="Doe" value="{{ user.last_name }}">
+            <input type="text" name="last_name" class="form-control" id="id_lastname" placeholder="Doe" value="{{ user.last_name }}" readonly>
             {% if form.last_name.errors %}
                 <div class="alert alert-danger">
                     {{ form.last_name.errors }}
@@ -40,7 +40,7 @@
 
         <div class="form-group col-md-6 mx-auto mt-2">
             <label for="id_phone">Phone Number:</label>
-            <input type="tel" name="phone" class="form-control" id="id_phone" placeholder="555-555-5555" value="{{ user.phone}}">
+            <input type="tel" name="phone" class="form-control" id="id_phone" placeholder="555-555-5555" value="{{ user.phone}}" readonly>
             {% if form.phone.errors %}
                 <div class="alert alert-danger">
                     {{ form.phone.errors }}
@@ -50,7 +50,7 @@
 
         <div class="form-group col-md-6 mx-auto mt-2">
             <label for="id_email">Email:</label>
-            <input type="email" name="email" class="form-control" id="id_email" placeholder="John@email.com" required value="{{ user.email }}">
+            <input type="email" name="email" class="form-control" id="id_email" placeholder="John@email.com" required value="{{ user.email }}"readonly>
             {% if form.email.errors %}
                 <div class="alert alert-danger">
                     {{ form.email.errors }}
