--- a/src/main/templates/login.html
+++ b/src/main/templates/login.html
@@ -8,25 +8,25 @@
             <div class="col-md-6">
                 <div class="card">
                     <div class="card-body">
-                        <h2 class="card-title text-center">Login</h2>
+                        <h2 class="card-title text-center p-1">Login</h2>
                         <form id="login-form" method="post">
                             {% csrf_token %}
                             <div class="form-group">
-                                <label for="id_username">Username</label>
+                                <label for="id_username" class="m-1">Username</label>
                                 <input type="text" class="form-control form-control-lg mb-2" id="id_username" name="username" placeholder="JohnDoe">
                             </div>
 
                             <div>
-                                <label for="id_password">Password</label>
+                                <label for="id_password" class="m-1">Password</label>
                                 <input type="password" class="form-control form-control-lg" id="id_password" name="password" placeholder="Enter your password">
                             </div>
 
-                            <button type="submit" class="btn btn-primary btn-block text-center mt-2">Login</button>
+                            <button type="submit" class="btn btn-mv-green btn-block text-center mt-2 text-white">Login</button>
                             
-                            <div class="text-center">
+                            <div class="text-center m-2">
                                 <a href="{% url 'signup' %}">Don't have an account? Sign Up Here</a>
                             </div>
-                            <div class="text-center">
+                            <div class="text-center m-2">
                                 <a href="{% url 'reset_password' %}">Forgot Password? Reset Here</a>
                             </div>
                         </form>
