--- a/src/main/templates/clientprofile.html
+++ b/src/main/templates/clientprofile.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
+{% block title %}Client Profile{% endblock %}
+
 {% block content %}
 <div class="container mx-auto">
     <h2 class="text-center">Your Information</h2>
