--- a/src/main/templates/navbar.html
+++ b/src/main/templates/navbar.html
@@ -22,7 +22,7 @@
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'contact_us' %}">Contact Us</a>
             </li>
-            <!-- Login/Signup,Profile Button -->
+            <!-- Login/Signup,Profile-->
             {% if user.is_authenticated %}
                 <li class="nav-item">
                     <a href="{% url 'clientprofile' %}" class="nav-link fw-bold text-mv-green">Profile</a>
