--- a/src/main/templates/navbar.html
+++ b/src/main/templates/navbar.html
@@ -1,11 +1,19 @@
 <!-- Navigation Bar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <!-- Brand Logo and Name -->
-    <a class="navbar-brand" href="{% url 'home' %}">
-        {% load static %}
-        <img src={% static "images/MedVoyageLogo.png" %} width="30" height="30" class="d-inline-block align-top" alt="Logo">
-        MedVoyage
-    </a>
+   {% if user.is_authenticated %}
+        <a class="navbar-brand" href="{% url 'clientdashboard' %}">
+            {% load static %}
+            <img src={% static "images/MedVoyageLogo.png" %} width="30" height="30" class="d-inline-block align-top" alt="Logo">
+            MedVoyage
+        </a> 
+    {% else %}
+        <a class="navbar-brand" href="{% url 'home' %}">
+            {% load static %}
+            <img src={% static "images/MedVoyageLogo.png" %} width="30" height="30" class="d-inline-block align-top" alt="Logo">
+            MedVoyage
+        </a>
+    {% endif %}
 
     <!-- Toggler for Mobile Devices -->
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
