update appointments model to test basic appointment creation

--- a/src/main/templates/book_appointment.html
+++ b/src/main/templates/book_appointment.html
@@ -17,11 +17,11 @@
                 <input type="text" class="form-control form-control-lg mb-2" id="id_time" name="time" placeholder="ex: 14:30">
             </div>
 
-            <!-- temporary implementation until tables and calendar widget are done. id will be pulled from logged in user info
+            <!-- temporary implementation until tables and calendar widget are done. id will be pulled from logged in user info -->
             <div class="form-group">
-                <label for="id_patient_id" class="m-1">Patient ID</label>
-                <input type="text" class="form-control form-control-lg mb-2" id="id_patient_id" name="patient_id" placeholder="Enter patient ID number here">
-            </div> -->
+                <label for="id_details" class="m-1">Appointment Details</label>
+                <input type="text" class="form-control form-control-lg mb-2" id="id_details" name="details" placeholder="Enter apppointment details here">
+            </div>
 
             <button type="submit" class="btn btn-mv-green btn-block text-center mt-2 text-white">Book Appointment</button>
         </form>
