--- a/src/main/templates/navbar.html
+++ b/src/main/templates/navbar.html
@@ -2,11 +2,19 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <!-- Brand Logo and Name -->
    {% if user.is_authenticated %}
+        {% if user.is_doctor %}
+        <a class="navbar-brand" href="{% url 'doctor_dashboard' %}">
+            {% load static %}
+            <img src={% static "images/MedVoyageLogo.png" %} width="30" height="30" class="d-inline-block align-top" alt="Logo">
+            MedVoyage
+        </a>
+        {% else %}
         <a class="navbar-brand" href="{% url 'client_dashboard' %}">
             {% load static %}
             <img src={% static "images/MedVoyageLogo.png" %} width="30" height="30" class="d-inline-block align-top" alt="Logo">
             MedVoyage
-        </a> 
+        </a>
+        {% endif %}
     {% else %}
         <a class="navbar-brand" href="{% url 'home' %}">
             {% load static %}
@@ -32,9 +40,15 @@
             </li>
             <!-- Login/Signup,Profile-->
             {% if user.is_authenticated %}
+                {% if user.is_doctor %}
+                <li class="nav-item">
+                    <a href="{% url 'doctor_profile' %}" class="nav-link fw-bold text-mv-green">Profile</a>
+                </li>
+                {% else %}
                 <li class="nav-item">
                     <a href="{% url 'client_profile' %}" class="nav-link fw-bold text-mv-green">Profile</a>
                 </li>
+                {% endif %}
             {% else %}
                 <li class="nav-item">
                     <a href="{% url 'user_login' %}" class="nav-link fw-bold text-mv-green">Login/Signup</a>
