--- a/src/main/templates/cancel_appointment.html
+++ b/src/main/templates/cancel_appointment.html
@@ -4,12 +4,12 @@
 
 {% block content %}
     <div>
-        <form id="cancel-form" method="post">
+        <form action="{% url 'cancel_appointment' %}" method="post">
             {% csrf_token %}
             <h2>Cancel an Appointment</h2>
             <div class="form-group">
                 <label for="id_appointment" class="m-1">Select the appointment you want to cancel</label>
-                <!-- change to dropdown menu later -->
+               
                 <input type="text" class="form-control form-control-lg mb-2" id="id_appointment" name="appointment" placeholder="Enter appointment id here">
             </div>
 
