--- a/src/main/templates/cancel_appointment.html
+++ b/src/main/templates/cancel_appointment.html
@@ -4,13 +4,19 @@
 
 {% block content %}
     <div>
+        {% if error_message %}
+            <p class="text-danger">{{ error_message }}</p>
+        {% endif %}
+        {% if success_message %}
+            <p class="text-success">{{ success_message }}</p>
+        {% endif %}
         <form action="{% url 'cancel_appointment' %}" method="post">
             {% csrf_token %}
             <h2>Cancel an Appointment</h2>
             <div class="form-group">
                 <label for="id_appointment" class="m-1">Select the appointment you want to cancel</label>
                
-                <input type="text" class="form-control form-control-lg mb-2" id="id_appointment" name="appointment" placeholder="Enter appointment id here">
+                <input type="text" class="form-control form-control-lg mb-2" id="id_appointment" name="appointment_id" placeholder="Enter appointment id here">
             </div>
 
             <!-- add in check box to confirm appointment deletion here -->
