--- a/src/main/templates/cancel_appointment.html
+++ b/src/main/templates/cancel_appointment.html
@@ -15,15 +15,30 @@
             <h2>Cancel an Appointment</h2>
             <div class="form-group">
                 <label for="id_appointment" class="m-1">Select the appointment you want to cancel</label>
-               
                 <input type="text" class="form-control form-control-lg mb-2" id="id_appointment" name="appointment_id" placeholder="Enter appointment id here">
             </div>
-
-            <!-- add in check box to confirm appointment deletion here -->
-
-
             <button type="submit" class="btn btn-mv-green btn-block text-center mt-2 text-white">Cancel Appointment</button>
         </form>
 
+        <h2>All Appointments:</h2>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Appointment ID</th>
+                    <th>Date</th>
+                    <th>Time</th>
+                    <!-- Add more columns as needed -->
+                </tr>
+            </thead>
+            <tbody>
+                {% for appointment in appointments %}
+                    <tr>
+                        <td>{{ appointment.appointment_id }}</td>
+                        <td>{{ appointment.date }}</td>
+                        <td>{{ appointment.time }}</td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
     </div>
 {% endblock %}
