--- a/src/main/templates/navbar.html
+++ b/src/main/templates/navbar.html
@@ -57,6 +57,9 @@
             <!-- Sign Out Button -->
             {% if user.is_authenticated %}
             <li class="nav-item">
+                <a href="/client_appointments" class="nav-link" >Patient Appointments</a>
+            </li>
+            <li class="nav-item">
                 <a href="/signout" class="nav-link" > Sign Out</a>
             </li>
             {% endif %}
