--- a/src/main/templates/doctor_profile.html
+++ b/src/main/templates/doctor_profile.html
@@ -5,8 +5,10 @@
 {% block content %}
 <div class="container mx-auto">
     <h2 class="text-center">Your Information</h2>
-        <div class="form-group col-md-6 mx-auto mt-2 d-flex justify-content-end">
-            <a href="{% url 'update_doctor_info' %}" class="btn btn-link">Edit</a>
+        <div class="d-flex justify-content-center mb-3">
+            <a href="{% url 'update_doctor_info' %}" class="btn btn-outline-secondary mx-1">Edit</a>
+            <a href="{% url 'add_slots' %}" class="btn btn-outline-success mx-1">Add Slots</a>
+            <a href="{% url 'slots_list' %}" class="btn btn-outline-info mx-1">View Slots</a>
         </div>
     <form method="post" action="{% url 'update_doctor_info' %}">
         {% csrf_token %}
