Fix some fields for cancel test cases and create basic view schedule test cases

--- a/src/main/templates/view_schedule.html
+++ b/src/main/templates/view_schedule.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}MedVoyage | Book Appointment{% endblock %}
+{% block title %}MedVoyage | View Schedule{% endblock %}
 
 {% block content %}
     <div>
