Made changes as per the received feedback for Doctor availability feature

--- a/src/main/templates/slots_list.html
+++ b/src/main/templates/slots_list.html
@@ -40,6 +40,7 @@
           </td>
         </tr>
       {% empty %}
+       <!-- This will be displayed if there are no slots -->
         <tr>
           <td colspan="4">No available slots.</td>
         </tr>
