--- a/src/main/templates/book_appointment.html
+++ b/src/main/templates/book_appointment.html
@@ -11,19 +11,32 @@
 
 {% block javascript %}
 <script>
-  document.getElementById("id_date").addEventListener("change", function() {
-      var date = this.value;
-      var doctorId = document.getElementById("id_doctor").value;
+  document.getElementById("id_doctor").addEventListener("change", function() {
+      var doctorId = this.value;
+      var date = document.getElementById("id_appointment_date").value;
       console.log(date, doctorId);
+
       fetch(`/get-doctor-availability-hours?doctor_id=${doctorId}&date=${date}`)
             .then(response => response.json())
-            .then(data => {
-                console.log(data); // Do something with the data
+            .then(jsonData => {
+                console.log(jsonData); // Do something with the data
                 const parentElement = document.getElementById("id_time_slot");
-                const optionElement = document.createElement('option');
-                optionElement.value = 1;
-                optionElement.text = 'something';
-                parentElement.appendChild(optionElement);
+                // Clear existing options
+                while (parentElement.firstChild) {
+                    parentElement.removeChild(parentElement.firstChild);
+                }
+                for (const dateItem of jsonData[date]) {
+                    // Create a new <option> element
+                    const optionElement = document.createElement('option');
+
+                    // Set the value and text content of the option
+                    optionElement.value = dateItem[0].toString() + ' - ' + dateItem[1].toString();
+                    console.log(optionElement.value)
+                    optionElement.text = dateItem[0].toString() + ' - ' + dateItem[1].toString();
+
+                    // Append the <option> element to the parent <select> element
+                    parentElement.appendChild(optionElement);
+                }
             })
             .catch(error => console.error('Error:', error));
   });
